# rust-hl7

./: .gitignore  CHANGELOG.md  Cargo.toml  bors.toml  build_and_run.bat  build_and_run.sh  perf.data  perf.data.old  readme.md
.github/workflows/: ci.yml
benches/: benchmarks.rs  decoder.rs  simple_parse.rs
dotnet/: ConsoleApp1.csproj  MessageHandle.cs  Native.cs  NhapiVsRustHL7.cs  Program.cs  StringHandle.cs  TimsSimpleParser.cs  nhapi.cs  rustHL7.cs
examples/: demo.rs  simple.rs  typed_segment.rs
src/: bin.rs  escape_sequence.rs  field_parser.rs  fields.rs  lib.rs  main.rs  main.rs.old  message.rs  message_parser.rs  native.rs  segment_parser.rs  segments.rs  selector.rs  separators.rs
src/decoder/: mod.rs
src/fields/: dtm.rs  mod.rs
src/pipe_parser/: field_parser.rs  message_parser.rs  mod.rs  segment_parser.rs
src/segments/: generic.rs  mod.rs  msh.rs
