[package]
name = "rust-hl7"
version = "0.5.0-pre"
authors = ["wokket <github@wokket.com>"]
edition = "2018"
description = "HL7 Parser and object builder? query'er? - experimental only at any rate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wokket/rust-hl7/"

[lib]
name="rusthl7"
path="src/lib.rs"

[features]
# Enables decoding of escape sequences for full HL7 compliance.  If you know you **absolutely** don't need this then you can disable the feature for a small performance improvement.
escape-sequence = []

[dependencies]
regex = "1.5"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple_parse"
harness = false

[[bench]]
name = "decoder"
harness = false